@@ -2189,8 +2189,8 @@ static struct cobc_reserved default_reserved_words[] = {
   { "POP-UP",			0, 1, POP_UP,			/* ACU extension */
 				0, CB_CS_DISPLAY
   },
-  { "POS",			0, 0, POS,			/* ACU extension for AT POSITION */
-	  0, 0
+  { "POS",			0, 1, POS,			/* ACU extension for AT POSITION */
+	  0, CB_CS_ACCEPT | CB_CS_DISPLAY
   },
   { "POSITION",			0, 0, POSITION,			/* 85 */
 				0, 0
