@@ -5,6 +5,13 @@
 	* cobc.c, flag.def, cobc.h: handle external table for "ebcdic-table"
 	* codegen.c: generate code using the external table
 
+2023-01-20  Simon Sobisch <simonsobisch@gnu.org>
+
+	fixed bug #704: ANY LENGTH cannot have ref-mod, POS not context-sensitive
+	* typeck.c (cb_build_identifier): skip compile-time check for length
+	  on ANY LENGTH items
+	* reserved.c (POS): now C/S to DISPLAY + ACCEPT with default wordlist
+
 2023-01-18  Simon Sobisch <simonsobisch@gnu.org>
 
 	* parser.y (cb_default_colseq, build_default_colseq, setup_default_colseq):
